--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -421,7 +421,7 @@ p {
   }
 }
 
-
+/* membuat footer = endri */
 
 .footer {
   align-items: center;
@@ -435,3 +435,5 @@ p {
   margin-top: 0.2rem;
   color: #f5f5f5;
 }
+
+/* selesai */
