--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -29,8 +29,15 @@ body:before {
   border-radius: 50%;
   -webkit-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
-  -webkit-animation: puff 0.5s 1.8s cubic-bezier(0.55, 0.055, 0.675, 0.19) forwards, borderRadius 0.2s 2.3s linear forwards;
-  animation: puff 0.5s 1.8s cubic-bezier(0.55, 0.055, 0.675, 0.19) forwards, borderRadius 0.2s 2.3s linear forwards;
+  -webkit-animation: puff 0.5s 1.8s cubic-bezier(0.55, 0.055, 0.675, 0.19)
+      forwards,
+    borderRadius 0.2s 2.3s linear forwards;
+  animation: puff 0.5s 1.8s cubic-bezier(0.55, 0.055, 0.675, 0.19) forwards,
+    borderRadius 0.2s 2.3s linear forwards;
+}
+
+ul {
+  list-style: none;
 }
 
 h1,
@@ -38,7 +45,6 @@ h2 {
   font-weight: 500;
   margin: 0px 0px 5px 0px;
 }
-
 
 h2 {
   font-size: 16px;
@@ -49,7 +55,7 @@ p {
 }
 
 .profile-card {
-  background: #FFB300;
+  background: #ffb300;
   width: 56px;
   height: 56px;
   position: absolute;
@@ -63,18 +69,26 @@ p {
   transform: translate(-50%, -50%);
   -webkit-border-radius: 50%;
   border-radius: 50%;
-  -webkit-box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16), 0px 3px 6px rgba(0, 0, 0, 0.23);
+  -webkit-box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16),
+    0px 3px 6px rgba(0, 0, 0, 0.23);
   box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.16), 0px 3px 6px rgba(0, 0, 0, 0.23);
-  -webkit-animation: init 0.5s 0.2s cubic-bezier(0.55, 0.055, 0.675, 0.19) forwards, moveDown 1s 0.8s cubic-bezier(0.6, -0.28, 0.735, 0.045) forwards, moveUp 1s 1.8s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards, materia 0.5s 2.7s cubic-bezier(0.86, 0, 0.07, 1) forwards;
-  animation: init 0.5s 0.2s cubic-bezier(0.55, 0.055, 0.675, 0.19) forwards, moveDown 1s 0.8s cubic-bezier(0.6, -0.28, 0.735, 0.045) forwards, moveUp 1s 1.8s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards, materia 0.5s 2.7s cubic-bezier(0.86, 0, 0.07, 1) forwards;
+  -webkit-animation: init 0.5s 0.2s cubic-bezier(0.55, 0.055, 0.675, 0.19)
+      forwards,
+    moveDown 1s 0.8s cubic-bezier(0.6, -0.28, 0.735, 0.045) forwards,
+    moveUp 1s 1.8s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards,
+    materia 0.5s 2.7s cubic-bezier(0.86, 0, 0.07, 1) forwards;
+  animation: init 0.5s 0.2s cubic-bezier(0.55, 0.055, 0.675, 0.19) forwards,
+    moveDown 1s 0.8s cubic-bezier(0.6, -0.28, 0.735, 0.045) forwards,
+    moveUp 1s 1.8s cubic-bezier(0.175, 0.885, 0.32, 1.275) forwards,
+    materia 0.5s 2.7s cubic-bezier(0.86, 0, 0.07, 1) forwards;
 }
 
 .profile-card header {
   width: 179px;
   height: 280px;
   display: inline-block;
-  border-right: 2px dashed #EEEEEE;
-  background: #FFFFFF;
+  border-right: 2px dashed #eeeeee;
+  background: #ffffff;
   color: #000000;
   margin-top: 90px;
   opacity: 0;
@@ -87,14 +101,14 @@ p {
   color: #5032d6;
 }
 
-.profile-card header a {
+.profile-card header a[href="#"] {
   display: inline-block;
   text-align: center;
   position: relative;
   margin: 25px 30px;
 }
 
-.profile-card header a:after {
+.profile-card header a[href="#"]:after {
   position: absolute;
   content: "";
   bottom: 3px;
@@ -104,8 +118,19 @@ p {
   border: 4px solid #c8b9b9;
   -webkit-transform: scale(0);
   transform: scale(0);
-  background: -webkit-linear-gradient(top, #ef0909 0%, #ef0909 50%, #ffffff 50%, #ffffff 100%);
-  background: linear-gradient(#ef0909 0%, #ef0909 50%, #ffffff 50%, #ffffff 100%);
+  background: -webkit-linear-gradient(
+    top,
+    #ef0909 0%,
+    #ef0909 50%,
+    #ffffff 50%,
+    #ffffff 100%
+  );
+  background: linear-gradient(
+    #ef0909 0%,
+    #ef0909 50%,
+    #ffffff 50%,
+    #ffffff 100%
+  );
   -webkit-border-radius: 50%;
   border-radius: 50%;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
@@ -226,7 +251,7 @@ p {
 
 @-webkit-keyframes moveUp {
   0% {
-    background: #FFB300;
+    background: #ffb300;
     top: 100%;
   }
   50% {
@@ -234,13 +259,13 @@ p {
   }
   100% {
     top: 50%;
-    background: #E0E0E0;
+    background: #e0e0e0;
   }
 }
 
 @keyframes moveUp {
   0% {
-    background: #FFB300;
+    background: #ffb300;
     top: 100%;
   }
   50% {
@@ -248,13 +273,13 @@ p {
   }
   100% {
     top: 50%;
-    background: #E0E0E0;
+    background: #e0e0e0;
   }
 }
 
 @-webkit-keyframes materia {
   0% {
-    background: #E0E0E0;
+    background: #e0e0e0;
   }
   50% {
     -webkit-border-radius: 4px;
@@ -262,14 +287,14 @@ p {
   100% {
     width: 440px;
     height: 280px;
-    background: #FFFFFF;
+    background: #ffffff;
     -webkit-border-radius: 4px;
   }
 }
 
 @keyframes materia {
   0% {
-    background: #E0E0E0;
+    background: #e0e0e0;
   }
   50% {
     border-radius: 4px;
@@ -277,7 +302,7 @@ p {
   100% {
     width: 440px;
     height: 280px;
-    background: #FFFFFF;
+    background: #ffffff;
     border-radius: 4px;
   }
 }
@@ -390,10 +415,10 @@ p {
     float: none;
     border-right: none;
   }
- 
+
   @-webkit-keyframes materia {
     0% {
-      background: #E0E0E0;
+      background: #e0e0e0;
     }
     50% {
       -webkit-border-radius: 4px;
@@ -401,13 +426,13 @@ p {
     100% {
       width: 280px;
       height: 440px;
-      background: #FFFFFF;
+      background: #ffffff;
       -webkit-border-radius: 4px;
     }
   }
   @keyframes materia {
     0% {
-      background: #E0E0E0;
+      background: #e0e0e0;
     }
     50% {
       border-radius: 4px;
@@ -415,7 +440,7 @@ p {
     100% {
       width: 280px;
       height: 440px;
-      background: #FFFFFF;
+      background: #ffffff;
       border-radius: 4px;
     }
   }
